Do Refactoring and Re-Structuring

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">TrySOAP</string>
+    <string name="mage_api_username">androidDev</string>
+    <string name="mage_api_apiKey">androidapikey</string>
+    <string name="MAGENTO_URL">http://onebagfull.com/anish/index.php</string>
 </resources>
